--- a/lilypichu.theme.css
+++ b/lilypichu.theme.css
@@ -41,8 +41,8 @@
   --interactive-active: #e2c1c7;
 
   /* Background color */
-  --background-primary: #5e3640;
-  --background-secondary: #49292f;
+  --background-primary: #4C007C;
+  --background-secondary: #F40174;
   --background-secondary-alt: #3b1d24;
   --background-tertiary: #220f14;
   --background-floating: #221115;
